@@ -51,9 +51,10 @@ class CSVNStatusListCtrlDropTarget;
 #define	SVNSLC_COLDATE				0x000020000
 #define SVNSLC_COLSVNNEEDSLOCK		0x000040000
 #define SVNSLC_COLCOPYFROM			0x000080000
-#define	SVNSLC_COLMODIFICATIONDATE	0x000100000
-#define	SVNSLC_COLSIZE				0x000200000
-#define SVNSLC_NUMCOLUMNS		22
+#define SVNSLC_COLCOPYFROMREV		0x000100000
+#define	SVNSLC_COLMODIFICATIONDATE	0x000200000
+#define	SVNSLC_COLSIZE				0x000400000
+#define SVNSLC_NUMCOLUMNS		23
 
 #define SVNSLC_SHOWUNVERSIONED	0x00000001
 #define SVNSLC_SHOWNORMAL		0x00000002
