@@ -55,6 +55,8 @@
 - NEW: Directly support single file c/o from c/o dialog (Stefan Fuhrmann)
 - NEW: Toolbar buttons to change the whitespace diff options in
        TortoiseMerge. (Stefan)
+- NEW: column showing the copyfrom-revision in the 
+       status list control. (Stefan)
 - BUG: Merged revisions must be counted only once in stats (Stefan Fuhrmann)
 
 Version 1.6.7
